--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,7 @@ body {
     color: white;
     margin: 50px;
     border-radius: 10px;
+    font-weight: bold;
 }
 
 .home-img {
@@ -22,3 +23,20 @@ body {
 
 
 }
+.input {
+    margin-right: 50%;
+    margin-top: 7px;
+    
+}
+
+.bottom-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-content: space-evenly;
+    background-color: gray;
+    color: white;
+
+}
+
+
