--- a/assets/style.css
+++ b/assets/style.css
@@ -94,3 +94,34 @@ legend {
     height: 700px;
     width: 100%;
 }
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+    
+  }
+  
+  a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .previous {
+    background-color: #f1f1f1;
+    color: black;
+  }
+  
+  .next {
+    background-color: #04AA6D;
+    color: white;
+  }
+  
+  .round {
+    border-radius: 50%;
+  }
+
+  .next-button {
+    display: flex;
+    justify-content: center;
+  }
