--- a/assets/style.css
+++ b/assets/style.css
@@ -125,3 +125,8 @@ a {
     display: flex;
     justify-content: center;
   }
+
+  #restaurant-picture {
+    width: 300px;
+    height: 300px;
+  }
